- **FIXED**: The `summary()` generic for the function `adjust_rate()` was never exported properly.



(we don't have to include all these, but we should keep a full list however minor)

Fixes
- FIX: summary() works correctly on `adjust_rate` objects (missing #' @export)
- FIX: plot() works correctly on `auto_rate` objects (missing #' @export)
- FIX: subset_data() - fix for failure with inspect() objects
- FIX: format_time() - fix for not appending new numeric time column onto a data.table
- FIX: format_time() - fix for data.frames columns being renamed on return (by using data.frame instead of cbind)
- FIX: auto_rate() - Fix for plots failing where result contains an NA (fix in multi.p() involving clip)
- FIX: import_file() - Fix for PreSens Oxyvew csv and txt files not being imported as numeric data. Now separate parsing for each.
- FIX: import_file() - Fix for MiniDot files not being imported as numeric data.
- FIX: import_file() - Imports European style formatted numeric data which uses commas instead of points for decimals.


Changes
- CHANGE: format_time - numeric time column name changed from `elapsed` to `time.num` (elapsed is not a good term for non-english speakers)
- CHANGE: Documentation - terminology clarifed. Rates now referred to as absolute (for whole animal or chamber) or mass specific.
  - (ugh, might have to revist the above - we use absolute in subset_rate for absolute value between +/- )
- CHANGE: Updated startup message for full MEE citation
- CHANGE: import_file docs - updated supported systems list
- CHANGE: Updated README
- CHANGE: ALL FUNCTIONS: changed dataframe in output to `$dataframe` for consistency (was $df, $data, $dataframe, etc. Makes for MUCH simpler code)


NEW
- NEW: subset_rate function - HIGHLIGHT
- NEW: Added `background_lin.rd` and `background_exp.rd` data for testing new background correction functionality
