@@ -1,18 +1,19 @@
 #' Truncate a data frame or `inspect()`` object to create a subset of the data
 #'
 #' This function subsets a data frame or `inspect()` object based on a given set
-#' of rules. It can subset data based on ranges of: time, oxygen, row number, or
-#' proportion of total oxygen used. For data frames, to subset by 'time', 'o2',
-#' or 'proportion', the time data is assumed to be in the first column, and
-#' oxygen in the second column. For `inspect()` objects, the data will have been
-#' coerced to this structure already. The function can subset **any** data frame
-#' by 'row'.
+#' of criteria. It can subset data based on ranges of: time, oxygen, row number,
+#' or proportion of total oxygen used or produced (note, this last option works
+#' poorly with noisy or fluctuating data). For data frames, to subset by `time`,
+#' `o2`, or `proportion`, the time data is assumed to be in the first column,
+#' and oxygen in the second column. For `inspect()` objects, the data will have
+#' been coerced to this structure already. The function can subset **any** data
+#' frame by `row`.
 #'
 #' For multiple column data frames, such as with time in column 1, and multiple
 #' columns of oxygen data, the subset object will include *all* columns. In the
-#' case of subsetting `by = "o2"`, subsetting is based on the first column of
-#' oxygen data (i.e. column 2), and all subsequent columns are subset between
-#' the same rows regardless of oxygen values.
+#' case of subsetting `by = "o2"` or `by = "proportion"`, subsetting is based on
+#' the first column of oxygen data (i.e. column 2), and all subsequent columns
+#' are subset between the same rows regardless of oxygen values.
 #'
 #' This function is ideal for passing only some regions of your data to other
 #' functions such as `auto_rate`, either by resaving them as a new object or
@@ -82,14 +83,7 @@ subset_data <- function(x, from, to, by = "time") {
       z <= to, dt[[2]])
     out <- dt[top:bot]
   } else if (by == "proportion") {
-    mx <- max(dt[[2]])
-    mn <- min(dt[[2]])
-    top <-
-      Position(function(z)
-        z <= (from * (mx - mn) + mn), dt[[2]])
-    bot <- Position(function(z)
-      z <= (to * (mx - mn) + mn), dt[[2]])
-    out <- dt[top:bot]
+    out <- truncate_data(x, from, to, by)
   }
   cat("\n# subset_data # -------------------------\n")
   cat("Original data:\n")
