@@ -22,19 +22,20 @@ A \code{data.table} or \code{inspect} object.
 }
 \description{
 This function subsets a data frame or \code{inspect()} object based on a given set
-of rules. It can subset data based on ranges of: time, oxygen, row number, or
-proportion of total oxygen used. For data frames, to subset by 'time', 'o2',
-or 'proportion', the time data is assumed to be in the first column, and
-oxygen in the second column. For \code{inspect()} objects, the data will have been
-coerced to this structure already. The function can subset \strong{any} data frame
-by 'row'.
+of criteria. It can subset data based on ranges of: time, oxygen, row number,
+or proportion of total oxygen used or produced (note, this last option works
+poorly with noisy or fluctuating data). For data frames, to subset by \code{time},
+\code{o2}, or \code{proportion}, the time data is assumed to be in the first column,
+and oxygen in the second column. For \code{inspect()} objects, the data will have
+been coerced to this structure already. The function can subset \strong{any} data
+frame by \code{row}.
 }
 \details{
 For multiple column data frames, such as with time in column 1, and multiple
 columns of oxygen data, the subset object will include \emph{all} columns. In the
-case of subsetting \code{by = "o2"}, subsetting is based on the first column of
-oxygen data (i.e. column 2), and all subsequent columns are subset between
-the same rows regardless of oxygen values.
+case of subsetting \code{by = "o2"} or \code{by = "proportion"}, subsetting is based on
+the first column of oxygen data (i.e. column 2), and all subsequent columns
+are subset between the same rows regardless of oxygen values.
 
 This function is ideal for passing only some regions of your data to other
 functions such as \code{auto_rate}, either by resaving them as a new object or
